add show methods to the Attribute value controller
