# app/Http/Controllers/AttributeValueController.php
@@ -1,0 +1,55 @@
+<?php
+
+namespace App\Http\Controllers;
+
+use App\Models\AttributesValues;
+use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Auth;
+use Illuminate\Support\Facades\Validator;
+use Illuminate\Support\Facades\Redirect;
+use Illuminate\Support\Facades\Hash;
+
+class AttributeValueController extends Controller
+{
+    /**
+     * display data of AttributesValue's table
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @return response
+     *
+     * @OA\Get(
+     *      path="/Attribute/Values",
+     *      summary="Show all of AttributesValue",
+     *      description="display all of AttributesValues",
+     *      tags={"AttributesValues"},
+     *      @OA\Response(
+     *          response=404,
+     *          description="Not_Found",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="message", type="string")
+     *          )
+     *      ),
+     *      @OA\Response(
+     *         response=200,
+     *         description="success",
+     *         @OA\JsonContent(
+     *             @OA\Property(
+     *                     property="message",
+     *                     type="string"
+     *             ),
+     *         )
+     *      )
+     * ),
+     *
+     *
+     */
+    public function show(){
+        $attr_type = AttributesTypes::all();
+
+        if($attr_type->count() <= 0){
+            return response()->json(['massege' => 'not found.'], 404);
+        }else{
+            return response()->json($attr_type, 200);
+        }
+    }
+}
